ansible/example/wordpress-volumes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress
spec:
  rules:
  - host: wp.k8s.optract.space
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress
          servicePort: 80
